# django-inheritrix

./: .gitignore  conftest.py  inheritrix.py  setup.cfg  setup.py  test_settings.py  test_urls.py
test_app/: models.py
test_app2/: models.py
tests/: test_converting_models_to_lookups.py  test_modelutils_compat.py  test_query_counts.py  test_queryset_methods.py
