[pytest]
norecursedirs=.* *.egg .svn _build src bin lib local include
python_files=tests/test_*.py
addopts = --cov inheritrix --cov-report term --cov-report html -vvv
django_find_project=false
DJANGO_SETTINGS_MODULE=test_settings

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[flake8]
max-line-length = 80

[check-manifest]
ignore-default-rules = true
ignore =
    .travis.yml
    .bumpversion.cfg
    PKG-INFO
    .eggs
    .idea
    .tox
    __pycache__
    bin
    include
    lib
    local
    share
    .Python
    *.egg-info
    *.egg-info/*
    setup.cfg
    .hgtags
    .hgignore
    .gitignore
    .bzrignore
    *.mo
